0914 완성본입니다.

--- a/src/main/resources/templates/supervisor/svMembersMng.html
+++ b/src/main/resources/templates/supervisor/svMembersMng.html
@@ -40,7 +40,7 @@
                         xhr.setRequestHeader(header, token);
                     },
                     success: function (response, status) {
-                        console.log(response);
+                        // console.log(response);
                         if (status == "success") {
                             // 성공적으로 삭제되었을 때 수행할 작업을 추가하세요.
                             alert("사용자 아이디가 성공적으로 삭제되었습니다.");
