--- a/src/main/resources/templates/supervisor/svItemMng.html
+++ b/src/main/resources/templates/supervisor/svItemMng.html
@@ -40,8 +40,8 @@
                         xhr.setRequestHeader(header, token);
                     },
                     success: function (response, status) {
-                        console.log(response);
-                        console.log(status);
+                        // console.log(response);
+                        // console.log(status);
                         if (status == 'success') {
                             // 성공적으로 삭제되었을 때 수행할 작업을 추가하세요.
                             alert("상품이 성공적으로 삭제되었습니다.");
